@@ -15,7 +15,16 @@
   <body>
     <canvas id="canvas" width="490" height="220"></canvas>
     <p>
-      Patient Name: <input type="text" id="patientName"></input>
+      Patient ID: <input type="text" id="patientID"></input>
+    </p>
+    <p>
+      Patient Name: <input type="text" id="patientName" value="HELLO^WORLD"></input>
+    </p>
+    <p>
+      Study Description: <input type="text" id="studyDescription" value="My Study"></input>
+    </p>
+    <p>
+      Series Description: <input type="text" id="seriesDescription" value="My Series"></input>
     </p>
     <p>
       <button id="submit">Submit</button>
